# project-lotus

./: .gitignore  .gitmodules  1  Cargo.toml  README.md  cicd_specification.md  lotus.js  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: lib.rs
test_app/: main.js
test_app/ui/: index.html  secondary.html
