[package]
name = "servo-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
winit = { version = "0.30" }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["x11", "wayland"] }
dpi = "0.1"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
crossbeam-channel = "0.5"
url = "2.5"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
env_logger = "0.11.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
interprocess = "2.3.0"
rmp-serde = "1.3.1"
byteorder = "1.5.0"
uuid = { version = "1.20.0", features = ["v4"] }
tiny_http = "0.12.0"
urlencoding = "2.1.3"
once_cell = "1.19"
dirs = "5.0"
mime_guess = "2.0.5"
http = "1.4.0"
window-vibrancy = "0.4"
dark-light = "1.0"





[dependencies.webrender]
version = "0.68"

[dependencies.euclid]
version = "0.22"

[dependencies.servo_url]
git = "https://github.com/servo/servo"
package = "servo_url"

[dependencies.servo]
git = "https://github.com/servo/servo"
package = "libservo"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Enable Link Time Optimization.
codegen-units = 1 # Maximize optimization at the cost of compile time.
panic = "abort" # Abort on panic (removes unwind tables).
